[gd_scene load_steps=9 format=3 uid="uid://byg7qsirmatr4"]

[ext_resource type="Script" path="res://Scenes/ColorBlock/color_block2d.gd" id="1_qv5tu"]
[ext_resource type="Texture2D" path="res://Assets/color_blocks/ice_block.tres" id="3_01h3s"]
[ext_resource type="Texture2D" uid="uid://bcumq1t2ouifb" path="res://Assets/color_blocks/key_and_lock/lock_silver.tres" id="3_63wuj"]
[ext_resource type="Texture2D" uid="uid://c52fvdnkyr4h1" path="res://Assets/color_blocks/eyes/eyes_1.png" id="4_01h3s"]
[ext_resource type="Texture2D" uid="uid://r0mibf8mbya4" path="res://Assets/color_blocks/key_and_lock/lock_bronze.tres" id="4_3eyof"]
[ext_resource type="Texture2D" uid="uid://ck6gpbb3632ln" path="res://Assets/color_blocks/key_and_lock/lock_gold.tres" id="5_jrngk"]
[ext_resource type="PackedScene" uid="uid://bocxkuoqq1o00" path="res://Scenes/ColorBlock/color_tile2d.tscn" id="6_5toyq"]

[sub_resource type="LabelSettings" id="LabelSettings_310ax"]
line_spacing = 16.0
font_size = 36
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="ColorBlock2D" type="Control"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchor_left = 0.431
anchor_top = 0.461
anchor_right = 0.569
anchor_bottom = 0.539
offset_left = -50.32
offset_top = -50.08
offset_right = 50.32
offset_bottom = 50.08
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(100, 92)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
script = ExtResource("1_qv5tu")
gold_lock_texture = ExtResource("5_jrngk")
silver_lock_texture = ExtResource("3_63wuj")
bronze_lock_texture = ExtResource("4_3eyof")

[node name="ColorTile0" parent="." instance=ExtResource("6_5toyq")]
layout_mode = 1
offset_right = 72.2
offset_bottom = 84.4

[node name="ColorTile1" parent="." instance=ExtResource("6_5toyq")]
layout_mode = 1
offset_left = 100.0
offset_right = 172.2
offset_bottom = 84.4

[node name="ColorTile2" parent="." instance=ExtResource("6_5toyq")]
layout_mode = 1
offset_top = 100.0
offset_right = 72.2
offset_bottom = 184.4

[node name="ColorTile3" parent="." instance=ExtResource("6_5toyq")]
layout_mode = 1
offset_left = 100.0
offset_top = 100.0
offset_right = 172.2
offset_bottom = 184.4

[node name="Button" type="Button" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_filter = 1
flat = true

[node name="DebugLabel" type="Label" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 2.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "1    2"
label_settings = SubResource("LabelSettings_310ax")
horizontal_alignment = 1

[node name="DebugLabel2" type="Label" parent="."]
visible = false
z_index = 5
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 98.0
offset_bottom = 296.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "3    4"
label_settings = SubResource("LabelSettings_310ax")
horizontal_alignment = 1

[node name="Ice" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.745098)
z_index = 1
layout_mode = 0
offset_left = -16.0
offset_top = -26.0
offset_right = 204.0
offset_bottom = 206.0
mouse_filter = 2
texture = ExtResource("3_01h3s")

[node name="Eyes" type="TextureRect" parent="."]
visible = false
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_01h3s")
stretch_mode = 5

[node name="Lock" type="TextureRect" parent="."]
visible = false
z_index = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -21.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("5_jrngk")
expand_mode = 1
stretch_mode = 5

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
